--- a/Projeto Integrador/pgAluno/src/components/Modal-Dados/modal-dados.css
+++ b/Projeto Integrador/pgAluno/src/components/Modal-Dados/modal-dados.css
@@ -47,71 +47,116 @@
     color: #333;
   }
   
-
-.dados-button {
-    margin-left: 15%;
-    margin-top: 10%;
-    font-size: 18px;
-    border-radius: 5px;
-    height: 48px;
-    width: 200px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
+  
+  
+  button{
+    background-color: transparent;
+    border-style: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: rgba(0, 0, 0, 0.6);
+    height: 4rem;
+    width: 80%;
+    font-size: 20px;
+    padding-top: 15px 0;
+    cursor: pointer;
+    font-weight: bolder;
+    font-family: Arial, Helvetica, sans-serif;
+    border-bottom: 1.5px solid rgb(0, 0, 0);
+  }
+  
+  button img {
+    margin-right: 10px;
+    width: 50px;
+  }
+  
+  button:hover {
+    color: rgb(255, 255, 255);
+    width: 225px;
+    transition: 0.5s;
     
-}
-
-.atividades-button {
-    margin-left: 15%;
-    margin-top: 10%;
-    font-size: 18px;
-    border-radius: 5px;
-    height: 48px;
-    width: 200px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-  
-}
-
-.horarios-button {
-    margin-left: 15%;
-    margin-top: 10%;
-    font-size: 18px;
-    border-radius: 5px;
-    height: 48px;
-    width: 200px;
-    background-color: rgb(255, 255, 255);
-    color: rgb(0, 0, 0);
-   
-}
-
-
-.parte-alta {
     
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
+    
+  }
   
-  width: 98%;
- 
-
-  border-radius: 5px;
-
-  font-size: 20px;
-}
-
-textarea{
-  resize: none;
-
-  font-size: 17px;
-  width: 30%;
+  .parte-alta {
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+    
+    width: 98%;
+    
+    
+    border-radius: 5px;
+    
+    font-size: 20px;
+  }
   
-}
-
-label {
+  textarea{
+    resize: none;
+    
+    font-size: 17px;
+    width: 30%;
+    
+  }
   
-  padding-left: 2%;
-  padding-right: 2%;
+  label {
+    
+    padding-left: 2%;
+    padding-right: 2%;
+    
+  }
+  
 
-}
 
+  /* 
+  .dados-button {
+      margin-left: 15%;
+      margin-top: 10%;
+      font-size: 18px;
+      border-radius: 5px;
+      height: 48px;
+      width: 200px;
+      background-color: rgb(255, 255, 255);
+      color: rgb(0, 0, 0);
+      
+  }
+  
+  .atividades-button {
+      margin-left: 15%;
+      margin-top: 10%;
+      font-size: 18px;
+      border-radius: 5px;
+      height: 48px;
+      width: 200px;
+      background-color: rgb(255, 255, 255);
+      color: rgb(0, 0, 0);
+    
+  }
+  
+  .horarios-button {
+      margin-left: 15%;
+      margin-top: 10%;
+      font-size: 18px;
+      border-radius: 5px;
+      height: 48px;
+      width: 200px;
+      background-color: rgb(255, 255, 255);
+      color: rgb(0, 0, 0);
+     
+  }
+  
+  .notas-button {
+      margin-left: 15%;
+      margin-top: 10%;
+      font-size: 18px;
+      border-radius: 5px;
+      height: 48px;
+      width: 200px;
+      background-color: rgb(255, 255, 255);
+      color: rgb(0, 0, 0);
+     
+  } */
