--- a/Projeto Integrador/pgAluno/src/components/Material-Infos/Material.css
+++ b/Projeto Integrador/pgAluno/src/components/Material-Infos/Material.css
@@ -1,15 +1,15 @@
 .material-button {
-    background-color: #3498db;
-    color: #fff;
-    border: none;
+    background-color: #f5f5f5;
+    color: #000000;
+    border: solid 2px #d1d1d1;
     padding: 10px 20px;
     cursor: pointer;
 }
 
 .link-button {
-    background-color: #e74c3c;
-    color: #fff;
-    border: none;
+    background-color: #f5f5f5;
+    color: #000000;
+    border: solid 2px #d1d1d1;
     padding: 10px 20px;
     cursor: pointer;
 }
@@ -27,36 +27,34 @@ ul {
     margin-right: 40px;
 }
 
-/* Estilo para links de download de PDFs */
 .pdf-link {
     background-color: #3498db;
-    /* Cor de fundo para links de PDF */
+   
     color: #fff;
-    /* Cor do texto */
+
     padding: 5px 10px;
-    /* Espaçamento interno */
+
     text-decoration: none;
-    /* Remover sublinhado */
+
     border-radius: 4px;
-    /* Borda arredondada */
+
 }
 
-/* Estilo para links para outros sites */
+
 .external-link {
-    background-color: #e74c3c;
-    /* Cor de fundo para links externos */
+    background-color: #3498db;
+
     color: #fff;
-    /* Cor do texto */
+
     padding: 5px 10px;
-    /* Espaçamento interno */
+
     text-decoration: none;
-    /* Remover sublinhado */
+
     border-radius: 4px;
-    /* Borda arredondada */
+
 }
 
-/* Estilizar o hover (quando o mouse passa por cima) se desejado */
-.pdf-link:hover,
+
 .external-link:hover {
     opacity: 0.8;
 }
